--- a/src/public/user/css/custom-style.css
+++ b/src/public/user/css/custom-style.css
@@ -113,7 +113,7 @@
 }
 
 .movie-rate-custom p {
-    font-size: 18px !important; 
+    font-size: 18px !important;
     color: #abb7c4 !important;
     margin-bottom: 0 !important;
 }
@@ -124,28 +124,28 @@
     padding: 0 10px;
 }
 .rate:not(:checked) > input {
-    position:absolute;
+    position: absolute;
     /* top:-9999px; */
     display: none;
 }
 .rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
+    float: right;
+    width: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: 30px;
+    color: #ccc;
 }
 .rate:not(:checked) > label:before {
-    content: '★ ';
+    content: "★ ";
 }
 .rate > input:checked ~ label {
-    color: #ffc700;    
+    color: #ffc700;
 }
 .rate:not(:checked) > label:hover,
 .rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
+    color: #deb217;
 }
 .rate > input:checked + label:hover,
 .rate > input:checked + label:hover ~ label,
@@ -153,4 +153,18 @@
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
+}
+
+/* .readonly {
+    background-color: #233a50 !important;
+} */
+
+input:disabled {
+    background: #233a50 !important;
+}
+
+.err-message {
+    color: red !important;
+    margin-top: -15px !important;
+    margin-bottom: 0px !important;
 }
