--- a/src/views/user/user-writer-favorite.ejs
+++ b/src/views/user/user-writer-favorite.ejs
@@ -78,7 +78,7 @@
                             <div class="user-fav">
                                 <p>Khác</p>
                                 <ul>
-                                    <li><a href="#">Đăng xuât</a></li>
+                                    <li><a href="/user/logout">Đăng xuât</a></li>
                                 </ul>
                             </div>
                         </div>
