--- a/src/views/user/layouts/head.ejs
+++ b/src/views/user/layouts/head.ejs
@@ -1,4 +1,4 @@
-<link rel="icon" href="/user/images/logo2.png" type="image/icon">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
 
 <!--Google Font-->
 <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
