Login facebook, login google

--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -9,7 +9,7 @@
 <html lang="en" class="no-js">
 <head>
 	<!-- Basic need -->
-	<!-- <title>Open Pediatrics</title> -->
+	<title>Trang chủ</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
