--- a/src/views/user/layouts/login-form.ejs
+++ b/src/views/user/layouts/login-form.ejs
@@ -35,8 +35,8 @@
         <div class="row">
         	<p><%- __('auth.or-via-social') %></p>
             <div class="social-btn-2">
-            	<a class="fb" href="#"><i class="ion-social-facebook"></i>Facebook</a>
-            	<a class="tw" href="#"><i class="ion-social-googleplus"></i>Google</a>
+            	<a class="fb" href="/auth/facebook"><i class="ion-social-facebook"></i>Facebook</a>
+            	<a class="tw" href="/auth/google"><i class="ion-social-googleplus"></i>Google</a>
             </div>
         </div>
     </div>
