--- a/src/views/user/user-book-favorite.ejs
+++ b/src/views/user/user-book-favorite.ejs
@@ -50,7 +50,7 @@
                             <h1 class="full-name-style"><%- userProfile.profile.full_name %></h1>
                             <ul class="breadcumb">
                                 <li class="active"><a href="/">Trang chủ</a></li>
-                                <li> <span class="ion-ios-arrow-right"></span>Sách yêu thích</li>
+                                <li> <span class="ion-ios-arrow-right"></span>Bài viết yêu thích</li>
                             </ul>
                         </div>
                     </div>
@@ -64,7 +64,9 @@
                         <div class="user-information">
                             <div class="user-img">
                                 <a href="#"><img src="<%- userProfile.profile.image %> " alt="" width="120" height="120"><br></a>
-                                <a href="#" class="redbtn">Đổi ảnh đại diện</a>
+                                <% if (isAuth) { %>
+                                    <a href="#" class="redbtn">Đổi ảnh đại diện</a>
+                                <% } %>
                             </div>
                             <div class="user-fav">
                                 <p>Chi tiết tài khoản</p>
@@ -75,12 +77,14 @@
                                     <li><a href="/user/my-review/<%- userProfile.profile.username %>-<%- userProfile._id %>">Bài viết của bạn</a></li>
                                 </ul>
                             </div>
-                            <div class="user-fav">
-                                <p>Khác</p>
-                                <ul>
-                                    <li><a href="/user/logout">Đăng xuât</a></li>
-                                </ul>
-                            </div>
+                            <% if (isAuth) { %>
+                                <div class="user-fav">
+                                    <p>Khác</p>
+                                    <ul>
+                                        <li><a href="/user/logout">Đăng xuât</a></li>
+                                    </ul>
+                                </div>
+                            <% } %>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-12 col-xs-12">
