--- a/src/views/user/user-profile.ejs
+++ b/src/views/user/user-profile.ejs
@@ -81,7 +81,7 @@
                                 <div class="user-fav">
                                     <p>Khác</p>
                                     <ul>
-                                        <li><a href="/user/logout">Đăng xuât</a></li>
+                                        <li><a href="/auth/logout">Đăng xuât</a></li>
                                     </ul>
                                 </div> 
                             <% } %>
