--- a/src/views/user/user-my-review.ejs
+++ b/src/views/user/user-my-review.ejs
@@ -64,7 +64,9 @@
                         <div class="user-information">
                             <div class="user-img">
                                 <a href="#"><img src="<%- userProfile.profile.image %> " alt="" width="120" height="120"><br></a>
-                                <a href="#" class="redbtn">Đổi ảnh đại diện</a>
+                                <% if (isAuth){ %>
+                                    <a href="#" class="redbtn">Đổi ảnh đại diện</a>
+                                <% } %>
                             </div>
                             <div class="user-fav">
                                 <p>Chi tiết tài khoản</p>
@@ -75,12 +77,14 @@
                                     <li class="active"><a>Bài viết của bạn</a></li>
                                 </ul>
                             </div>
-                            <div class="user-fav">
-                                <p>Khác</p>
-                                <ul>
-                                    <li><a href="/user/logout">Đăng xuât</a></li>
-                                </ul>
-                            </div>
+                            <% if (isAuth) { %>
+                                <div class="user-fav">
+                                    <p>Khác</p>
+                                    <ul>
+                                        <li><a href="/user/logout">Đăng xuât</a></li>
+                                    </ul>
+                                </div>
+                            <% } %>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-12 col-xs-12">
